# catalogo-giochi-esame

./: .gitignore  Analisi progetto.md  CMakeLists.txt  README.md  catalogo.c  catalogo_giochi_esame  catalogolib.c  catalogolib.h  gioco.c  gioco.h  tunity_catalogo.c  utility.c  utility.h
Unity-2.6.1/src/: unity.c
doxygen-doc/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  catalogo_8c.html  catalogo_8c.js  catalogo_8c_source.html  catalogolib_8c.html  catalogolib_8c.js  catalogolib_8c_source.html  catalogolib_8h.html  catalogolib_8h.js  catalogolib_8h__dep__incl.dot  catalogolib_8h__incl.dot  catalogolib_8h_source.html  classes.html  dir_007ad4948e580287e9d3cd339e78f152.html  dir_007ad4948e580287e9d3cd339e78f152.js  dir_15bbac75479ff2a9c97e37ce96d72c43.html  dir_15bbac75479ff2a9c97e37ce96d72c43.js  dir_5273672b10fcd82d47208322e49a8668.html  dir_5273672b10fcd82d47208322e49a8668.js  dir_860c11998a3807e839f8c74cce4c2bd1.html  dir_860c11998a3807e839f8c74cce4c2bd1.js  dir_860c11998a3807e839f8c74cce4c2bd1_dep.dot  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_b726448d04ef4f6c0f0193c6cac310d2.html  dir_b726448d04ef4f6c0f0193c6cac310d2.js  dir_bd9a708968e51a5126c54d788dc3f758.html  dir_bd9a708968e51a5126c54d788dc3f758.js  dir_bd9a708968e51a5126c54d788dc3f758_dep.dot  dir_cd2ed09edadd7a875a4f507b86445ff4.html  dir_cd2ed09edadd7a875a4f507b86445ff4.js  dir_d522931ffa1371640980b621734a4381.html  dir_d522931ffa1371640980b621734a4381.js  dir_d5fd32d807c49e1adff1007384377ada.html  (+84 more)
(+103 files in other folders)
